# auth-service-demo

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
tests/: test_main.py
